# Elysium

./: .env.example  craco.config.js  firestore.rules  netlify.toml  package-lock.json  package.json  sing doc zzHRXplKRmby0YxfoyK2  supabase-email-template.html
SOL-AR-backend/: Anchor.toml  Cargo.toml
SOL-AR-backend/src/: lib.rs
public/: index.html
src/: App.tsx  App.tsx.backup  idl.json  index.css  index.tsx  snappy.d.ts
src/SUPABASE/: supabaseClient.ts
src/components/: APITest.tsx  ArConnectModal.tsx  CloudAuth.tsx  CreateNote.tsx  CreateNote.tsx.backup  DeleteConfirmationModal.tsx  Drawer.tsx  LanguageConfirmationPopup.tsx  LanguageSelector.tsx  Logout.tsx  MobileWalletSetup.tsx  SaveConfirmationPopup.tsx  Settings.tsx  WanderDownloadPopup.tsx
src/firebase/: auth.ts  config.ts  firestore.ts  index.ts  storage.ts
src/hooks/: useCloudStorage.ts  useDynamicTranslation.ts
src/utils/: arweave-utils.ts  crypto.ts
